# stocko

./: .gitignore  README.md  guide.md  plan.md  pyproject.toml
configs/: backtest_compare.yaml  data_alpaca_yfinance_fred.yaml  qlib_lightgbm_alpha158.yaml  qlib_master.yaml  qlib_stockmixer.yaml  universe_nasdaq100.yaml  universe_sp500.yaml
notebooks/: 00_colab_setup.ipynb  01_data_ingestion.ipynb  02_qlib_dataset_build.ipynb  03_train_lightgbm_alpha158.ipynb  04_train_master.ipynb  05_train_stockmixer.ipynb  06_backtest_compare_models.ipynb  pipeline.ipynb
scripts/: build_qlib_dataset.py  compare_models.py  ingest_data.py  train_model.py
src/stock_manager/: __init__.py
src/stock_manager/backtest/: __init__.py  compare.py  metrics.py
src/stock_manager/config/: __init__.py  loader.py
src/stock_manager/data/: __init__.py  ingestion.py  providers.py  schema.py  universe.py
src/stock_manager/features/: __init__.py  alpha158.py  labels.py
src/stock_manager/models/: __init__.py  base.py  lightgbm_alpha158.py  master_impl.py  stockmixer_impl.py  torch_adapters.py
src/stock_manager/qlib/: __init__.py  converter.py
src/stock_manager/reporting/: __init__.py  artifacts.py
src/stock_manager/utils/: logging.py  paths.py
tests/: test_backtest.py  test_config.py  test_labels.py  test_lightgbm_training.py  test_qlib_converter.py  test_schema.py  test_splits.py  test_torch_training.py
