[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-manager"
version = "0.1.0"
description = "US equities research, training, and backtesting pipeline for DiffSTOCK."
readme = "README.md"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "pyarrow>=14.0",
  "pyyaml>=6.0",
  "yfinance>=0.2.40",
  "alpaca-py>=0.28",
  "fredapi>=0.5",
  "scikit-learn>=1.3",
  "lightgbm>=4.0",
  "matplotlib>=3.8",
]

[project.optional-dependencies]
qlib = ["pyqlib>=0.9.6"]
torch = ["torch>=2.1"]
dev = ["pytest>=8.0", "ruff>=0.5"]
notebook = ["ipykernel>=6.29", "notebook>=7.0"]
all = [
  "pyqlib>=0.9.6",
  "torch>=2.1",
  "pytest>=8.0",
  "ruff>=0.5",
  "ipykernel>=6.29",
  "notebook>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

